# CppLibExt

./: CMakeLists.txt  FindCppLibExt.cmake  LICENSE.txt  README.md
include/: multi_array.hpp
include/cpplibext/: bit_mask.hpp  command_line.hpp  cstring_len.hpp  cstring_view.hpp  fixed_uint.hpp  flexible_stack.hpp  generic_string.hpp  grid_vector.hpp  growing_stack.hpp  join_string.hpp  local_vector.hpp  make_array.hpp  make_shared_array.hpp  make_unique.hpp  member_function.hpp  multi_array.hpp  multi_string.hpp  packed_vector.hpp  path.hpp  range_iterator.hpp
include/cpplibext/detail/: product.hpp  select.hpp
include/cpplibext/details/: join_sub_string.hpp  product.hpp  select.hpp  string_append.hpp  string_empty.hpp
tests/: tests.cpp
